# OBSAT-2023

./: README.md  teste.js
Firmware/: CMakeLists.txt  sdkconfig  sdkconfig.old
Firmware/components/ds18b20/: CMakeLists.txt  ds18b20.c
Firmware/main/: CMakeLists.txt  comunicacao.c  corrente_placa.c  format_json.c  gpio.c  main.c  main.h  nivel_bateria.c  queues.c  semaphore.c
Firmware/main/estudos/: CMakeLists.txt  gpio.c  queues.c  task_mutex.c
Firmware/main/payload/: CMakeLists.txt  contador_geiger.c  contador_geiger.h  corrente_placa.c  nivel_bateria.c  tensao_placa.c  tensao_placa.h
Firmware/main/sensores/: CMakeLists.txt  bmp180.h  bmp180_cod.c  bmp180_cod.h  ds18b20.c  ds18b20.h  ds18b20_cod.c
Firmware/main/sensores/acel_gyro/: CMakeLists.txt  gyro.c  gyro.h  mpu6050_cod.c  mpu6050_cod.h
Firmware/main/sensores/sensores_i2c/: CMakeLists.txt  i2c.c  i2c.h
Firmware/main/sensores/temperatura_bmp180/: CMakeLists.txt  bmp180_cod.c  bmp180_cod.h
Firmware/main/sensores/temperatura_ds18b20/: CMakeLists.txt  ds18b20_cod.c  ds18b20_cod.h
Firmware/main/servidor/: CMakeLists.txt  http_client.c  http_client.h  wifi.c  wifi.h
docs/: correntePlaca.c  main.c  sensores.c
