idf_component_register(SRCS "main.c" "sensores/temperatura_bmp180/bmp180_cod.c" "estudos/gpio.c" "sensores/temperatura_ds18b20/ds18b20_cod.c" "sensores/acel_gyro/mpu6050_cod.c" "sensores/acel_gyro/gyro.c" "payload/tensao_placa.c" "servidor/wifi.c" "servidor/http_client.c"
                    INCLUDE_DIRS ".")
